--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -7,7 +7,8 @@
 /* BG */
 
 	body.is-preload #bg:before {
-		background-color: transparent;
+		 /* background-color: transparent; */
+                 background-image: url("images/bhbh.jpg");
 	}
 
 /* Header */
