--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -627,13 +627,13 @@ input, select, textarea {
 		.image:before {
 			pointer-events: none;
 			background-image: url("images/bhbh.jpg");
-			/* background-color: rgba(19, 21, 25, 0.5) ; */
+			background-color: rgba(19, 21, 25, 0.5) ;
 			border-radius: 4px;
 			content: '';
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 1.0;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -1119,7 +1119,7 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			/* background-image:  /* linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), */ url("/images/bhbh.jpg"); */
+			background-image:   linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5));
 			background-size: auto, 256px 256px;
 			background-position: center, center;
 			background-repeat: no-repeat, no-repeat;
@@ -1377,7 +1377,7 @@ input, select, textarea {
 			-webkit-filter: blur(0.1rem);
 			-ms-filter: blur(0.1rem);
 			filter: blur(0.1rem);
-			opacity: 0;
+			opacity: 1;
 		}
 
 		body.is-preload #header {
