--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1374,7 +1374,7 @@ input, select, textarea {
 			top: 0;
 			left: calc(50% - 1px);
 			width: 1px;
-			height: 100%;
+			height: 0%; /* 100% */
 			background: #ffffff;
 		}
 
