--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -626,7 +626,7 @@ input, select, textarea {
 
 		.image:before {
 			pointer-events: none;
-			background-image: url("images/bhbh.jpg");
+			background-image: url("images/typeia_sne.jpg");
 			background-color: rgba(19, 21, 25, 0.5) ;
 			border-radius: 4px;
 			content: '';
@@ -1135,7 +1135,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bhbh.jpg");
+			background-image: url("../../images/typeia_sne.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
