updating background image

--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -8,7 +8,7 @@
 
 	body.is-preload #bg:before {
 		 background-color: ;
-                 background-image: url("images/bhbh.jpg");
+                 background-image: url("images/typeia_sne.jpg");
 	}
 
 /* Header */
