--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -626,7 +626,7 @@ input, select, textarea {
 
 		.image:before {
 			pointer-events: none;
-			background-image: url("images/typeia_sne.jpg");
+			background-image: url("../../images/typeia_sne.jpg");
 			background-color: rgba(19, 21, 25, 0.5) ;
 			border-radius: 4px;
 			content: '';
