--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1709,6 +1709,13 @@ article:after {
     height: 0 !important;
 }
 */
+
+article:not(#intro):not(#cv):before,
+article:not(#intro):not(#cv):after {
+    display: none !important;
+    background: none !important;
+}
+
 #publications {
     border: none !important;
     box-shadow: none !important;
